# Projeto_TCC

./: html.html
docs/: explicacao_backends.md
experiments/: experiment_api_ia.py  teste.py
prototipo_tcc/: .gitignore  README.md  pyproject.toml
prototipo_tcc/src/mysite/gest_financeira/: apps.py  consult.ipynb  gpt_api.py  models.py  urls.py  views.py
prototipo_tcc/src/mysite/gest_financeira/migrations/: 0001_initial.py  0002_rename_amont_registros_amount.py  0003_registros_type_register.py
prototipo_tcc/src/mysite/gest_financeira/templates/gest_financeira/: home.html
prototipo_tcc/src/mysite/mysite/: settings.py  urls.py
prototipo_tcc/src/mysite/usuarios/: backends.py  forms.py  urls.py  views.py
prototipo_tcc/src/mysite/usuarios/static/usuarios/: style.css
prototipo_tcc/src/mysite/usuarios/templates/usuarios/: login.html  signup.html
