[project]
name = "prototipo-tcc"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro",email = "pedroh.fokus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "openai (>=1.82.0,<2.0.0)",
    "plotly (>=6.1.1,<7.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "mysite", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
